--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
+    "@types/react-redux": "^7.1.25",
     "@types/uuid": "^8.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.5",
     "react-scripts": "3.4.1",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.5",
-    "typescript": "~3.7.2",
+    "typescript": "4.5.5",
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
